--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.18.0",
+    "chai": "^4.1.2",
+    "chai-http": "^2.0.1",
     "cors": "^2.8.4",
     "express-cors": "0.0.3",
     "express-graphql": "^0.6.12",
@@ -14,6 +16,7 @@
     "graphql": "^0.13.2",
     "graphql-date": "^1.0.3",
     "jsonwebtoken": "^8.2.0",
+    "mocha": "^5.2.0",
     "mongoose": "^5.0.10",
     "multer": "^1.3.0",
     "nodemon": "^1.17.4",
@@ -30,7 +33,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "start-server": "node ./api/server",
-    "test": "react-scripts test --env=jsdom",
+    "test": "mocha Graph/**/*.spec.js --recursive",
+    "test-react": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   }
 }
