--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "graphql-date": "^1.0.3",
     "jsonwebtoken": "^8.2.0",
     "mocha": "^5.2.0",
+    "moment": "^2.22.1",
     "mongoose": "^5.0.10",
     "multer": "^1.3.0",
     "nodemon": "^1.17.4",
@@ -33,7 +34,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "start-server": "node ./api/server",
-    "test": "mocha Graph/**/*.spec.js --recursive",
+    "test": "mocha \"Graph/**/*.spec.js\" --recursive --timeout=10000 ",
     "test-react": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   }
