--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "sai",
   "license": "MIT",
   "dependencies": {
+    "apollo-server-express": "^1.3.6",
     "axios": "^0.18.0",
     "chai": "^4.1.2",
     "chai-http": "^2.0.1",
@@ -13,6 +14,7 @@
     "express-cors": "0.0.3",
     "express-graphql": "^0.6.12",
     "express-jwt": "^5.3.1",
+    "graphiql-custom-headers": "^1.0.0",
     "graphql": "^0.13.2",
     "graphql-date": "^1.0.3",
     "jsonwebtoken": "^8.2.0",
